# timetracker

./: ANDROID_BUILD_GUIDE.md  Procfile  app.py  build_apk.sh  buildozer.spec  main.py  mobile_app.py  pyproject.toml  replit.nix  requirements.txt  sheets_service.py
instance/: breaks.db
static/js/: main.js
templates/: index.html
